# ft_linear_regression

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: estimate_price.py  train.py
test/: test_estimate_price.py  test_train.py
