[tool.poetry]
name = "ft-linear-regression"
version = "0.1.0"
description = ""
authors = ["Rutger Cappendijk <rutgercappendijk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
